--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Drone Distraction Analysis"
 author: "Wei Han"
-description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
+description: "Digital And Robotic Construction"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
